# music3

./: Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/crates/client/: Cargo.toml  README.md
backend/crates/client/src/: error.rs  lib.rs  solana.rs
backend/crates/common/: Cargo.toml  README.md
backend/crates/common/src/: lib.rs  param.rs  utils.rs
backend/crates/common/src/param/: auth.rs
backend/crates/server/: Cargo.toml  README.md
backend/crates/server/src/: auth.rs  conf.rs  error.rs  lib.rs  route.rs  upload.rs
backend/crates/server/src/auth/: claim.rs  conf.rs  error.rs  hmac.rs  jwt.rs  param.rs
backend/crates/shuttle/: Cargo.toml
backend/crates/shuttle/src/: main.rs
contract/: Anchor.toml
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: lib.rs
contract/programs/music3-contract/: Cargo.toml
contract/programs/music3-contract/src/: lib.rs
contract/tests/: contract.ts  music3-contract.ts
crates/common/: Cargo.toml
docs/: PROJECT.md
frontend/music3_app/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
frontend/music3_app/android/: local.properties
frontend/music3_app/android/app/: build.gradle
frontend/music3_app/android/app/src/main/: AndroidManifest.xml
frontend/music3_app/android/app/src/main/kotlin/com/example/music3_app/: MainActivity.kt
frontend/music3_app/ios/Runner/: Info.plist
frontend/music3_app/ios/Runner.xcodeproj/: project.pbxproj
frontend/music3_app/linux/: CMakeLists.txt  my_application.cc
frontend/music3_app/macos/Runner.xcodeproj/: project.pbxproj
frontend/music3_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/music3_app/macos/Runner/Configs/: AppInfo.xcconfig
frontend/music3_app/test/: widget_test.dart
frontend/music3_app/web/: index.html  manifest.json
frontend/music3_app/windows/: CMakeLists.txt
frontend/music3_app/windows/runner/: Runner.rc  main.cpp
