[workspace]
members = ["crates/common", "crates/server", "crates/client", "crates/shuttle"]
resolver = "2"

[workspace.metadata.release]
shared-version = true

[workspace.dependencies]
serde = "1"
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = "1"

[patch.crates-io.curve25519-dalek]
# This patch is needed to fix this issue:
# https://github.com/solana-labs/solana/issues/26688
# https://github.com/solana-labs/solana/issues/26688#issuecomment-2177265057
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"