[package]
name = "music3-client"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[dependencies]
thiserror = { workspace = true }
music3-common = { path = "../common" }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
solana-sdk = "2.0.9"
url = "2.5.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
