[package]
name = "music3-client"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[dependencies]
thiserror = { workspace = true }
music3-common = { path = "../common" }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls", "multipart"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-quic-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
url = "2.5.2"
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
