[package]
name = "music3-server"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-valid = { version = "0.20.0", features = ["validify", "basic", "aide"], default-features = false }
thiserror = { workspace = true }
anyhow = { workspace = true }
music3-common = { path = "../common" }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
jsonwebtoken = "9.3.0"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aide = "0.13.4"
config = "0.14.0"
base64 = "0.22.1"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = {workspace = true, features = ["fs"] }
[dev-dependencies]
axum-test = "15.7.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
